Fix mobile css not working on mobile

--- a/css/root.css
+++ b/css/root.css
@@ -66,6 +66,7 @@ code {
     color: var(--color-code-text);
     padding: 1px 4px;
     border-radius: 8px;
+    overflow-wrap: break-word;
 }
 
 strong {
@@ -184,8 +185,8 @@ header p {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    padding: 4em;
+    height: 150vh;
+    padding: 2em 3em;
     box-sizing: border-box;
 
     z-index: 10;
@@ -248,7 +249,7 @@ header p {
 }
 
 #navigation-mobile li {
-    padding: 0.5em 0;
+    padding: 0.3em 0;
     font-size: 1.25em;
 }
 
